@@ -2,4 +2,6 @@
 # File: py-rcsb_utils_io/MANIFEST.in
 #
 include HISTORY.txt
+include requirements.txt
+include README.md
 #
