@@ -15,8 +15,16 @@ from setuptools import setup
 packages = []
 thisPackage = "rcsb.utils.config"
 
-with open("rcsb/utils/config/__init__.py", "r") as fd:
+with open("rcsb/utils/config/__init__.py", "r", encoding="utf-8") as fd:
     version = re.search(r'^__version__\s*=\s*[\'"]([^\'"]*)[\'"]', fd.read(), re.MULTILINE).group(1)
+
+
+# Load packages from requirements*.txt
+with open("requirements.txt", "r", encoding="utf-8") as ifh:
+    packagesRequired = [ln.strip() for ln in ifh.readlines()]
+
+with open("README.md", "r", encoding="utf-8") as ifh:
+    longDescription = ifh.read()
 
 if not version:
     raise RuntimeError("Cannot find version information")
@@ -25,7 +33,8 @@ setup(
     name=thisPackage,
     version=version,
     description="RCSB Python Configuration Utilities",
-    long_description="See:  README.md",
+    long_description_content_type="text/markdown",
+    long_description=longDescription,
     author="John Westbrook",
     author_email="john.westbrook@rcsb.org",
     url="https://github.com/rcsb/py-rcsb_utils_config",
@@ -39,11 +48,11 @@ setup(
         "License :: OSI Approved :: Apache Software License",
         "Programming Language :: Python",
         "Programming Language :: Python :: 3",
-        "Programming Language :: Python :: 3.7",
+        "Programming Language :: Python :: 3.9",
     ),
     entry_points={},
     #
-    install_requires=["future", 'configparser; python_version < "3.0"', "PyNaCl >= 1.3.0", "ruamel.yaml", "rcsb.utils.io >= 0.63"],
+    install_requires=packagesRequired,
     packages=find_packages(exclude=["rcsb.utils.tests-config", "rcsb.utils.tests-*", "tests.*"]),
     package_data={
         # If any package contains *.md or *.rst ...  files, include them:
